--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.servlet.multipart.max-request-size=120MB
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.web.resources.static-locations=classpath:/static/
+app.upload.dir=uploads
