--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,11 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 python.service.url=http://localhost:5000
+spring.mail.password=Y7Ejsvy7CAcZ0jDwHfYX
 spring.mail.host=smtp.mail.ru
-spring.mail.protocol=smtp
-spring.mail.port=587
+spring.mail.protocol=smtps
+spring.mail.port=465
 spring.mail.username=e-skotnikov@mail.ru
-spring.mail.password=QS59uJ5dwW4uLJZmgS3D
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.timeout=60000
-spring.mail.properties.mail.smtp.connectiontimeout=60000
-spring.mail.properties.mail.smtp.writetimeout=60000
-spring.mail.properties.mail.smtp.debug=true
-spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2,TLSv1.3
-spring.mail.properties.mail.smtp.ssl.trust=*
 logging.level.org.springframework.mail=DEBUG
 logging.level.javax.mail=DEBUG
 spring.mail.properties.mail.smtps.timeout=10000
